--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -20,9 +20,16 @@ body{
 .header{
     height: 20%;
     width: 100%;
+    margin: 0.3rem 0 1rem 2rem;
+    font-size: 2rem;
+    text-shadow: 0.3rem 0.3rem 0.3rem grey;
 }
 
 .container{
     display: flex;
     flex-direction: row;
+}
+
+.area{
+    width: 80%;
 }
