--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -17,25 +17,17 @@ body{
     overflow: scroll;
 }
 
-.header{
+.title{
     height: 20%;
     width: 100%;
     margin: 0.3rem 0 1rem 2rem;
     font-size: 2rem;
     text-shadow: 0.3rem 0.3rem 0.3rem grey;
-}
-
-.menu_bar{
-    display: flex;
-    flex-direction: row;
+    text-decoration: none;
 }
 
 .area{
     width: 85%;
-}
-
-.search_form{
-    margin-left: auto;
 }
 
 .delete-btn{
